--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools wheel
         python -m pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
@@ -37,4 +38,17 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        python -m pytest
+        python -m pytest -v
+    - name: Build distributoin package
+      run: |
+        python setup.py bdist_wheel
+        python setup.py sdist
+    - name: Upload the whl-file to artifact
+      uses: actions/upload-artifact@v3
+      with: 
+        name: packagedwheel
+        path: ./dist/*
+      if: matrix.python-version == '3.11'
+
+
+      
