--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -19,14 +19,15 @@ jobs:
         python-version: ["3.9", "3.10", "3.11"]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install --upgrade setuptools wheel
         python -m pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
@@ -37,4 +38,17 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        python -m pytest
+        python -m pytest -v
+    - name: Build distributoin package
+      run: |
+        python setup.py bdist_wheel
+        python setup.py sdist
+    - name: Upload the whl-file to artifact
+      uses: actions/upload-artifact@v4
+      with: 
+        name: packagedwheel
+        path: ./dist/*
+      if: matrix.python-version == '3.11'
+      # Pythonバージョンに依存しないPKGなので、最新バージョンのみで成果物を保存する
+
+
