#5 気泡が異なる？

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -50,7 +50,7 @@ jobs:
       with: 
         name: python-package-distributions
         path: ./dist/*
-      if: matrix.python-version == ${{ env.SELECTED_VERSION4BUILD }}
+      if: matrix.python-version == env.SELECTED_VERSION4BUILD
       # Pythonバージョンに依存しないPKGなので、特定のバージョンのみで成果物を保存する
 
 
