#6 機能追加した。合わせてPyPIへの登録にワークフロー書き換えた

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -6,8 +6,6 @@ name: Python package
 on:
   push:
 #     branches: [ "main" ]
-#  pull_request:
-#    branches: [ "main" ]
 
 jobs:
   build:
@@ -78,8 +76,8 @@ jobs:
         path: dist/
     - name: Publish distribution to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        repository-url: https://test.pypi.org/legacy/
+#      with:
+#        repository-url: https://test.pypi.org/legacy/
   
 
 
