--- a/.github/workflows/publish-distribution-to-test-pypi.yml
+++ b/.github/workflows/publish-distribution-to-test-pypi.yml
@@ -5,7 +5,7 @@ name: Python package
 
 on:
   push:
-     branches: [ "main" ]
+    branches-ignore: [ "main" ]
 
 jobs:
   build:
@@ -54,7 +54,7 @@ jobs:
 
 
   publish-to-testpypi:
-    name: Publish Python distribution to PyPI
+    name: Publish Python distribution to TestPyPI
     if: startsWith(github.ref, 'refs/tags/')
     # only publish to PyPI on tag pushes
     needs: 
@@ -74,8 +74,10 @@ jobs:
       with:
         name: python-package-distributions
         path: dist/
-    - name: Publish distribution to PyPI
+    - name: Publish distribution to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
+      with:
+        repository-url: https://test.pypi.org/legacy/
   
 
 
