--- a/.github/workflows/publish-distribution-to-pypi.yml
+++ b/.github/workflows/publish-distribution-to-pypi.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies for build, pytest
       run: |
         python -m pip install --upgrade pip
-        python -m pip install --upgrade setuptools wheel
+        python -m pip install --upgrade build
         python -m pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with flake8
@@ -40,8 +40,7 @@ jobs:
         python -m pytest -v
     - name: Build a binary wheel and a source tarball
       run: |
-        python setup.py bdist_wheel
-        python setup.py sdist
+        python -m build
     - name: Store the distribution packages to artifact
       uses: actions/upload-artifact@v4
       with: 
